- Fixes download issue with certain filenames - Fixes widget layout and auto collapse of current group
git-svn-id: https://plugins.svn.wordpress.org/gi-media-library/trunk@1139187 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/views/site/css/widget.css
+++ b/includes/views/site/css/widget.css
@@ -24,3 +24,6 @@
 /*#giml-widget .ui-accordion .ui-menu .ui-widget-content {
     background: none repeat scroll 0% 0% #FFF;
 }*/
+#giml-widget h3 {
+    margin-bottom: 0px;
+}
